@@ -768,15 +768,21 @@ compute_value (const char *s, const regmatch_t *mp,
 				number = 0.;
 				/* FIXME: this loop is bogus.  */
 				do {
-					if (number > DBL_MAX/1000.)
+					int thisnumber;
+					if (fabs (number) > DBL_MAX/1000.)
 						return FALSE;
 
 					number *= 1000.;
 
 					errno = 0; /* strtol sets errno, but does not clear it.  */
-					number += strtol (ptr, &ptr, 10);
+					thisnumber = strtol (ptr, &ptr, 10);
 					if (errno == ERANGE)
 						return FALSE;
+					if (number >= 0)
+						number += thisnumber;
+					else
+						number -= thisnumber;
+
 				} while (*(ptr++) == thousands_sep);
 				is_number = TRUE;
 			}
